--- a/playground-common/androidx-shared.properties
+++ b/playground-common/androidx-shared.properties
@@ -90,3 +90,5 @@ kotlin.mpp.applyDefaultHierarchyTemplate=false
 android.experimental.privacysandboxsdk.plugin.enable=true
 # Allow non-shim usage
 android.experimental.privacysandboxsdk.requireServices=false
+
+androidx.allowCustomCompileSdk=true
